--- a/todolist_app/package.json
+++ b/todolist_app/package.json
@@ -21,6 +21,7 @@
         "@fortawesome/fontawesome-svg-core": "^6.1.1",
         "@fortawesome/free-solid-svg-icons": "^6.1.1",
         "@fortawesome/vue-fontawesome": "^3.0.0-5",
+        "@meforma/vue-toaster": "^1.3.0",
         "vue": "^3.2.31",
         "vue-loader": "^17.0.0"
     }
